<resources>
    <string name="app_name">Weather AI</string>
</resources>